--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Alshurbaji's Portfolio</title>
+    <title>Remi Koppel</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -120,12 +120,12 @@
         <div class="container" data-aos="zoom-out">
           <div class="row justify-content-center">
             <div class="col-lg-9">
-              <h2>Mohammad Alshurbaji</h2>
+              <h2>Remi Koppel</h2>
               <p>
                 I'm
                 <span
                   class="typed"
-                  data-typed-items="a Data Scientist, a Data Analyst, an Engineer, a Programmer, a Problem Solver"
+                  data-typed-items="a Solution Architect, a DevOps, an Automation Engineer, a ICT Specialist, a Problem Solver"
                   >Designer</span
                 ><span
                   class="typed-cursor typed-cursor--blink"
