--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <span
                   class="typed"
                   data-typed-items="an Automation Engineer, a Solution Architect, a DevOps, an ICT Specialist, a Problem Solver"
-                  >Designer</span
+                  ></span
                 ><span
                   class="typed-cursor typed-cursor--blink"
                   aria-hidden="true"
