--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 I'm
                 <span
                   class="typed"
-                  data-typed-items="an Automation Engineer, a Solution Architect, a DevOps, an ICT Specialist, a Problem Solver"
+                  data-typed-items="an Automation & Software Engineer, a Solution Architect, a DevOps, an ICT Specialist, an Entrepreneur"
                   ></span
                 ><span
                   class="typed-cursor typed-cursor--blink"
