--- a/index.html
+++ b/index.html
@@ -259,155 +259,101 @@
       </section>
       <!-- /Stats Section -->
 
-      <!-- Skills Section -->
+           <!-- Skills Section -->
       <section id="skills" class="skills section">
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
           <h2>Skills</h2>
           <p>
-            A blend of technical and soft skills, including client interactions,
-            pitching ideas, effective communication, and teamwork, ensuring
-            seamless collaboration and impactful contributions.
+            A mix of backend engineering, DevOps, and AI integration skills,
+            used to design, deploy, and maintain reliable cloud-based systems.
           </p>
         </div>
         <!-- End Section Title -->
 
-        <!-- <div class="container" data-aos="fade-up" data-aos-delay="100">
-          <div class="row skills-content skills-animation">
-            <div class="col-lg-6">
-              <div class="progress">
-                <span class="skill"
-                  ><span>Python</span> <i class="val">100%</i></span
-                >
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="100"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-              End Skills Item -->
-        <!-- </div>
-          </div> -->
-        <!-- Skills List -->
-        <!-- <div class="container" data-aos="fade-up" data-aos-delay="100">
-          <ul>
-            <li>
-              <strong>Programming & Data:</strong> Python, SQL, MATLAB, C++, C,
-              JavaScript, Java, HTML, VBA
-            </li>
-            <li>
-              <strong>Data Science & ML:</strong> NumPy, Pandas, TensorFlow,
-              PyTorch, Scikit-learn, Tableau, Power BI
-            </li>
-            <li>
-              <strong>Data Engineering Tools:</strong> MySQL, ETL Pipelines,
-              Data Warehousing, AWS
-            </li>
-            <li>
-              <strong>Solution Engineering:</strong> Ignition 8.1, SolidWorks,
-              AutoCAD, Fusion 360, JMP, ABAQUS, ANSYS
-            </li>
-            <li>
-              <strong>Languages:</strong> English – Proficient, Arabic –
-              Proficient, Spanish – Beginner
-            </li>
-          </ul> -->
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="row">
-            <!-- Programming & Data -->
+
+            <!-- Backend & Programming -->
             <div class="col-md-6">
-              <h4>Programming & Data</h4>
+              <h4>Backend &amp; Programming</h4>
               <ul class="two-column-list">
                 <li>Python</li>
-                <li>SQL</li>
-                <li>MATLAB</li>
-                <li>C++</li>
-                <li>C</li>
+                <li>Node.js</li>
+                <li>TypeScript</li>
                 <li>JavaScript</li>
-                <li>Java</li>
-                <li>HTML</li>
-                <li>VBA</li>
-                <li>YAML</li>
+                <li>SQL</li>
+                <li>Bash</li>
+                <li>REST APIs</li>
               </ul>
             </div>
 
-            <!-- Data Science & ML -->
+            <!-- Frameworks & Frontend -->
             <div class="col-md-6">
-              <h4>Data Science & ML</h4>
+              <h4>Frameworks &amp; Frontend</h4>
               <ul class="two-column-list">
-                <li>LightGBM</li>
-                <li>NumPy</li>
-                <li>Pandas</li>
-                <li>Scikit-learn</li>
-                <li>TensorFlow</li>
-                <li>PyTorch</li>
-                <li>Databricks</li>
-              </ul>
-            </div>
-            <!-- Visualization & BI-->
-            <div class="col-md-6">
-              <h4>Visualization & BI</h4>
-              <ul class="two-column-list">
-                <li>Tableau</li>
-                <li>Power BI</li>
-                <li>Matplotlib</li>
-                <li>Seaborn</li>
+                <li>Express.js</li>
+                <li>React</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
               </ul>
             </div>
 
-            <!-- Data Engineering Tools -->
+            <!-- DevOps & Cloud -->
             <div class="col-md-6">
-              <h4>Data Engineering Tools</h4>
+              <h4>DevOps &amp; Cloud</h4>
               <ul class="two-column-list">
-                <li>MySQL</li>
-                <li>ETL Pipelines</li>
-                <li>Data Warehousing</li>
-                <li>AWS</li>
+                <li>Docker</li>
+                <li>CI/CD (GitHub Actions, GitLab CI)</li>
+                <li>Git &amp; version control</li>
+                <li>Linux</li>
+                <li>Google Cloud Platform (GCP)</li>
+                <li>Firebase</li>
+                <li>Azure</li>
               </ul>
             </div>
 
-            <!-- Solution Engineering -->
+            <!-- Data, Automation & AI Integration -->
             <div class="col-md-6">
-              <h4>Solution Engineering</h4>
+              <h4>Data, Automation &amp; AI</h4>
               <ul class="two-column-list">
-                <li>Ignition 8.1</li>
-                <li>SolidWorks</li>
-                <li>AutoCAD</li>
-                <li>Fusion360</li>
-                <li>JMP</li>
-                <li>ABAQUS</li>
-                <li>ANSYS</li>
+                <li>PostgreSQL</li>
+                <li>MongoDB</li>
+                <li>ETL &amp; automation scripting</li>
+                <li>Zapier &amp; workflow automation</li>
+                <li>LLM APIs (OpenAI, Gemini)</li>
+                <li>Slack &amp; API integrations</li>
               </ul>
             </div>
+
           </div>
         </div>
+
         <!-- Soft Skills Section -->
         <div class="container mt-4" data-aos="fade-up">
           <h4 class="text-center">Soft Skills</h4>
-          <div class="d-flex justify-content-between text-center">
+          <div class="d-flex justify-content-between text-center flex-wrap gap-2">
             <span>Problem Solving</span>
-            <span>Teamwork</span>
-            <span>Communication Skills</span>
-            <span>Leadership</span>
-            <span>Agile Methodology</span>
-            <span>Project Management</span>
+            <span>Ownership &amp; Accountability</span>
+            <span>Communication with Stakeholders</span>
+            <span>Teamwork &amp; Remote Collaboration</span>
+            <span>Agile / SCRUM</span>
+            <span>Project &amp; Delivery Focus</span>
           </div>
         </div>
-        <!-- Languages Section (Last, One Line Centered) -->
+
+        <!-- Languages Section -->
         <div class="container mt-4" data-aos="fade-up">
           <h4 class="text-center">Languages</h4>
-          <div class="d-flex justify-content-between text-center">
-            <span>English – Proficient</span>
-            <span>Arabic – Proficient</span>
-            <span>Spanish – Beginner</span>
+          <div class="d-flex justify-content-between text-center flex-wrap gap-2">
+            <span>Polish – Native</span>
+            <span>English – Fluent</span>
+            <span>Italian – Communicative</span>
           </div>
         </div>
       </section>
       <!-- /Skills Section -->
+
 
       <!-- Resume Section -->
       <section id="resume" class="resume section">
