--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 I'm
                 <span
                   class="typed"
-                  data-typed-items="an Automation Engineer, a Solution Architect, a DevOps, an ICT Specialist, a Software Engineer"
+                  data-typed-items="an Automation Engineer, a Solution Architect, a DevOps, a Software Engineer, an ICT Specialist"
                   ></span
                 ><span
                   class="typed-cursor typed-cursor--blink"
@@ -280,7 +280,6 @@
               <ul class="two-column-list">
                 <li>Python</li>
                 <li>Node.js</li>
-                <li>TypeScript</li>
                 <li>JavaScript</li>
                 <li>SQL</li>
                 <li>Bash</li>
@@ -308,10 +307,31 @@
                 <li>Git &amp; version control</li>
                 <li>Linux</li>
                 <li>Google Cloud Platform (GCP)</li>
+                <li>Microsoft Azure</li>
                 <li>Firebase</li>
-                <li>Azure</li>
               </ul>
             </div>
+
+
+<!-- Networking, Security & Identity -->
+            <div class="col-md-6">
+              <h4>Networking, Security &amp; Identity</h4>
+              <ul class="two-column-list">
+                <li>TCP/IP fundamentals</li>
+                <li>DNS, DHCP, routing basics</li>
+                <li>SSH &amp; remote administration</li>
+                <li>HTTPS, certificates, reverse proxies</li>
+                <li>Windows Server administration</li>
+                <li>Identity &amp; access management</li>
+                <li>OAuth2 / OpenID Connect</li>
+                <li>Single Sign-On (SSO)</li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+
+
 
             <!-- Data, Automation & AI Integration -->
             <div class="col-md-6">
@@ -319,7 +339,7 @@
               <ul class="two-column-list">
                 <li>PostgreSQL</li>
                 <li>MongoDB</li>
-                <li>ETL &amp; automation scripting</li>
+                <li>n8n</li>
                 <li>Zapier &amp; workflow automation</li>
                 <li>LLM APIs (OpenAI, Gemini)</li>
                 <li>Slack &amp; API integrations</li>
@@ -346,8 +366,8 @@
         <div class="container mt-4" data-aos="fade-up">
           <h4 class="text-center">Languages</h4>
           <div class="d-flex justify-content-between text-center flex-wrap gap-2">
+            <span>English – Fluent </span>
             <span>Polish – Native</span>
-            <span>English – Fluent</span>
             <span>Italian – Communicative</span>
           </div>
         </div>
