--- a/index.html
+++ b/index.html
@@ -259,15 +259,12 @@
       </section>
       <!-- /Stats Section -->
 
-           <!-- Skills Section -->
+      <!-- Skills Section -->
       <section id="skills" class="skills section">
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
           <h2>Skills</h2>
-          <p>
-            A mix of backend engineering, DevOps, and AI integration skills,
-            used to design, deploy, and maintain reliable cloud-based systems.
-          </p>
+
         </div>
         <!-- End Section Title -->
 
@@ -275,7 +272,7 @@
           <div class="row">
 
             <!-- Backend & Programming -->
-            <div class="col-md-6">
+            <div class="col-md-6 col-lg-4">
               <h4>Backend &amp; Programming</h4>
               <ul class="two-column-list">
                 <li>Python</li>
@@ -288,7 +285,7 @@
             </div>
 
             <!-- Frameworks & Frontend -->
-            <div class="col-md-6">
+            <div class="col-md-6 col-lg-4">
               <h4>Frameworks &amp; Frontend</h4>
               <ul class="two-column-list">
                 <li>Express.js</li>
@@ -299,7 +296,7 @@
             </div>
 
             <!-- DevOps & Cloud -->
-            <div class="col-md-6">
+            <div class="col-md-6 col-lg-4">
               <h4>DevOps &amp; Cloud</h4>
               <ul class="two-column-list">
                 <li>Docker</li>
@@ -312,9 +309,8 @@
               </ul>
             </div>
 
-
-<!-- Networking, Security & Identity -->
-            <div class="col-md-6">
+            <!-- Networking, Security & Identity -->
+            <div class="col-md-6 col-lg-4">
               <h4>Networking, Security &amp; Identity</h4>
               <ul class="two-column-list">
                 <li>TCP/IP fundamentals</li>
@@ -328,13 +324,8 @@
               </ul>
             </div>
 
-          </div>
-        </div>
-
-
-
             <!-- Data, Automation & AI Integration -->
-            <div class="col-md-6">
+            <div class="col-md-6 col-lg-4">
               <h4>Data, Automation &amp; AI</h4>
               <ul class="two-column-list">
                 <li>PostgreSQL</li>
@@ -342,7 +333,7 @@
                 <li>n8n</li>
                 <li>Zapier &amp; workflow automation</li>
                 <li>LLM APIs (OpenAI, Gemini)</li>
-                <li>Slack &amp; API integrations</li>
+                <li>NLP</li>
               </ul>
             </div>
 
@@ -366,13 +357,14 @@
         <div class="container mt-4" data-aos="fade-up">
           <h4 class="text-center">Languages</h4>
           <div class="d-flex justify-content-between text-center flex-wrap gap-2">
-            <span>English – Fluent </span>
+            <span>English – Fluent</span>
             <span>Polish – Native</span>
             <span>Italian – Communicative</span>
           </div>
         </div>
       </section>
       <!-- /Skills Section -->
+
 
 
       <!-- Resume Section -->
