--- a/index.html
+++ b/index.html
@@ -838,11 +838,7 @@
                 data-aos-delay="200"
               >
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
-                <div>
-                  <h3>Address</h3>
-                  <p>833 old greenville hwy</p>
-                </div>
-              </div>
+
               <!-- End Info Item -->
 
               <div
@@ -878,24 +874,7 @@
               data-aos-delay="500"
             >
               <i class="bi bi-person-lines-fill flex-shrink-0"></i>
-              <div>
-                <h3>References</h3>
-                <p>
-                  <strong>Prof. Enrique Saez</strong> – Master's Supervisor,
-                  Clemson University<br />
-                  <a href="mailto:enrique@clemson.edu">enrique@clemson.edu</a
-                  ><br /><br />
 
-                  <strong>Prof. Naser Al-Huniti</strong> – Undergraduate Senior
-                  Project's Supervisor, The University of Jordan<br />
-                  <a href="mailto:alhuniti@ju.edu.jo">alhuniti@ju.edu.jo</a
-                  ><br /><br />
-
-                  <strong>Prof. Kai Liu</strong> – Master's Instructor, Clemson
-                  University<br />
-                  <a href="mailto:kail@clemson.edu">kail@clemson.edu</a>
-                </p>
-              </div>
             </div>
 
             <div class="col-lg-8">
@@ -969,12 +948,9 @@
 
     <footer id="footer" class="footer position-relative light-background">
       <div class="container">
-        <h3 class="sitename">Mohammad Alshurbaji</h3>
+        <h3 class="sitename">Remi Koppel</h3>
         <p>
-          I’m Mohammad, a data scientist with a focus on machine learning and
-          data-driven solutions. I’m passionate about solving complex problems
-          and applying my skills in technology and finance to create innovative
-          solutions.
+          I’m Remi, Software & Automation Engineer with a strong background in cloud-native systems. I design and maintain reliable platforms and hybrid environments, connecting data, AI services, and business applications.
         </p>
         <div class="social-links d-flex justify-content-center">
           <a href="https://www.linkedin.com/in/remigiusz-koppel/"
