--- a/index.html
+++ b/index.html
@@ -626,28 +626,31 @@
               data-aos="fade-up"
               data-aos-delay="200"
             >
-              <!-- Smart Farm Automation Platform -->
+
+
+              <!-- MemoRead – AI-powered Language Learning PWA -->
               <div
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects"
               >
                 <div class="card shadow-sm p-3 h-100">
                   <div class="card-body d-flex flex-column">
-                    <h4 class="card-title">Smart Farm Automation Platform</h4>
+                    <h4 class="card-title">
+                      MemoRead – AI-powered Language Learning PWA
+                    </h4>
                     <p class="card-text text-muted mb-1">
-                      IoT-based automation platform combining on-prem devices
-                      with GCP services for monitoring and control.
+                      Prototype PWA that turns photos of physical books into
+                      interactive flashcards using Gemini and Firebase.
                     </p>
                     <p class="text-secondary small mb-3">
-                      <i class="bi bi-calendar-event"></i> 2025 – Bylandbruget
-                      Baggaarden
+                      <i class="bi bi-calendar-event"></i> 2025 – MemoRead
                     </p>
                     <button
                       class="btn btn-outline-secondary btn-sm mt-auto"
                       data-bs-toggle="modal"
                       data-bs-target="#projectModal"
                       onclick="openModal(
-                        'Smart Farm Automation Platform',
-                        'Designed an end-to-end IoT automation environment combining edge devices with GCP services (Firestore, Secret Manager, Artifact Registry, Firebase Hosting). Provisioned infrastructure with Terraform, and used GitHub Actions + Ansible to build, deploy and maintain edge and cloud services with automated health checks. Integrated logging and monitoring for telemetry streams using GCP Monitoring dashboards and alert policies.'
+                        'MemoRead – AI-powered Language Learning PWA',
+                        'Designed and implemented MemoRead, a full-stack progressive web app for learning languages from physical materials. Users upload photos of book pages; a backend built with Google Cloud Functions and the Gemini API extracts text, generates flashcards, idioms and example sentences, and stores them in Firestore. The frontend is a React + Vite PWA hosted on Firebase Hosting, with Firebase Authentication and Firestore security rules controlling access. Applied UX design principles to create a mobile-first interface optimised for reading and spaced repetition. The project is currently in prototype stage but already integrates the full pipeline from image capture to AI-enhanced study material.'
                       )"
                     >
                       Details
@@ -655,6 +658,8 @@
                   </div>
                 </div>
               </div>
+
+          
 
               <!-- Slack AI Assistant -->
               <div
@@ -668,7 +673,7 @@
                       running on containerized infrastructure in GCP.
                     </p>
                     <p class="text-secondary small mb-3">
-                      <i class="bi bi-calendar-event"></i> 2024 – 2025 –
+                      <i class="bi bi-calendar-event"></i> 2024 – 
                       &amp;SHUFL
                     </p>
                     <button
@@ -677,7 +682,7 @@
                       data-bs-target="#projectModal"
                       onclick="openModal(
                         'Slack AI Assistant',
-                        'Built and containerized a Retrieval-Augmented Generation (RAG) Slack assistant using OpenAI and other LLM APIs for internal knowledge queries. Deployed on GCP Cloud Run with Docker images stored in Artifact Registry, and managed secrets via Secret Manager and IAM. Implemented structured logging and metrics to monitor performance, latency and error rates, and tuned autoscaling to minimize cold starts while keeping costs under control.'
+                        'Built and containerized a Retrieval-Augmented Generation (RAG) Slack assistant using OpenAI LLM APIs for internal knowledge queries. Deployed on GCP Cloud Run with Docker images stored in Artifact Registry, and managed secrets via Secret Manager and IAM. Developed in Python, implemented structured logging and metrics to monitor performance, latency and error rates, and tuned autoscaling to minimize cold starts while keeping costs under control.'
                       )"
                     >
                       Details
@@ -700,7 +705,7 @@
                       data on GCP.
                     </p>
                     <p class="text-secondary small mb-3">
-                      <i class="bi bi-calendar-event"></i> 2024 – 2025 –
+                      <i class="bi bi-calendar-event"></i> 2025 –
                       &amp;SHUFL
                     </p>
                     <button
@@ -709,7 +714,7 @@
                       data-bs-target="#projectModal"
                       onclick="openModal(
                         'Cloud Reporting & ERP Automations',
-                        'Created Dockerized microservices and serverless pipelines on GCP Cloud Functions/Cloud Run to generate PDF/CSV reports from ERP/CRM systems. Automated deployments via GitHub Actions with role-based IAM and structured logging. Reduced manual reporting work and improved data reliability by centralizing business logic and scheduling in the cloud.'
+                        'Created Dockerized microservices and serverless pipelines on GCP Cloud Functions/Cloud Run to generate PDF/CSV reports from ERP/CRM systems. Developed in Python. Automated deployments via GitHub Actions with role-based IAM and structured logging. Reduced manual reporting work and improved data reliability by centralizing business logic and scheduling in the cloud.'
                       )"
                     >
                       Details
@@ -749,6 +754,110 @@
                   </div>
                 </div>
               </div>
+
+
+              <!-- Smart Farm Automation Platform -->
+              <div
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects"
+              >
+                <div class="card shadow-sm p-3 h-100">
+                  <div class="card-body d-flex flex-column">
+                    <h4 class="card-title">Smart Farm Automation Platform</h4>
+                    <p class="card-text text-muted mb-1">
+                      IoT-based automation platform combining on-prem devices
+                      with GCP services for monitoring and control.
+                    </p>
+                    <p class="text-secondary small mb-3">
+                      <i class="bi bi-calendar-event"></i> 2025 – Bylandbruget
+                      Baggaarden
+                    </p>
+                    <button
+                      class="btn btn-outline-secondary btn-sm mt-auto"
+                      data-bs-toggle="modal"
+                      data-bs-target="#projectModal"
+                      onclick="openModal(
+                        'Smart Farm Automation Platform',
+                        'Designed an end-to-end IoT automation environment combining edge devices with GCP services (Firestore, Secret Manager, Artifact Registry, Firebase Hosting). Provisioned infrastructure with Terraform, and used GitHub Actions + Ansible to build, deploy and maintain edge and cloud services with automated health checks. Integrated logging and monitoring for telemetry streams using GCP Monitoring dashboards and alert policies.'
+                      )"
+                    >
+                      Details
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+
+
+              <!-- Inventory Pricing Calculator Service -->
+              <div
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects"
+              >
+                <div class="card shadow-sm p-3 h-100">
+                  <div class="card-body d-flex flex-column">
+                    <h4 class="card-title">
+                      Inventory Pricing Calculator Service
+                    </h4>
+                    <p class="card-text text-muted mb-1">
+                      Full-stack calculator app on GCP that fetches live product
+                      prices from the ERP via REST APIs.
+                    </p>
+                    <p class="text-secondary small mb-3">
+                      <i class="bi bi-calendar-event"></i> 2024 –
+                      &amp;SHUFL
+                    </p>
+                    <button
+                      class="btn btn-outline-secondary btn-sm mt-auto"
+                      data-bs-toggle="modal"
+                      data-bs-target="#projectModal"
+                      onclick="openModal(
+                        'Inventory Pricing Calculator Service',
+                        'Designed and deployed a full-stack calculator application on GCP for internal use at &amp;SHUFL. The service dynamically gathers current inventory pricing and product information from the ERP using RESTful APIs, and exposes a user-friendly web interface for sales and operations. Implemented the backend as containerized microservices (Cloud Run), managed secrets and environment configuration in Secret Manager, and wired CI/CD with GitHub Actions for automated build and deploy. The result is a single source of truth for prices that updates in real time from the ERP rather than static spreadsheets.'
+                      )"
+                    >
+                      Details
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- 3CAD Catalog & ERP Integration -->
+              <div
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects"
+              >
+                <div class="card shadow-sm p-3 h-100">
+                  <div class="card-body d-flex flex-column">
+                    <h4 class="card-title">
+                      3CAD Catalog &amp; ERP Integration
+                    </h4>
+                    <p class="card-text text-muted mb-1">
+                      Product catalog and pricing logic for 3CAD, connected
+                      end-to-end with the ERP via RESTful APIs.
+                    </p>
+                    <p class="text-secondary small mb-3">
+                      <i class="bi bi-calendar-event"></i> 2025 –
+                      &amp;SHUFL
+                    </p>
+                    <button
+                      class="btn btn-outline-secondary btn-sm mt-auto"
+                      data-bs-toggle="modal"
+                      data-bs-target="#projectModal"
+                      onclick="openModal(
+                        '3CAD Catalog & ERP Integration',
+                        'Built the full product catalog and pricing layer for a 3rd-party configuration tool (3CAD). Designed and implemented the relational structure between 3D elements, their visual representations and configuration constraints using LayEdit language inside 3CAD. Translated complex pricing rules into a maintainable logic layer and established an end-to-end integration between 3CAD and the ERP using RESTful APIs. The pipeline synchronises product data and prices, reducing manual updates and ensuring consistency between visual designs and commercial offers.'
+                      )"
+                    >
+                      Details
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+
+
+
+
+
+
 
               <!-- CERTIFICATES -->
 
