--- a/index.html
+++ b/index.html
@@ -398,9 +398,40 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="resume-title">Professional Experience</h3>
 
+
+      <!-- Self-employed B2B contractor -->
+      <div class="resume-item" style="text-align: justify">
+        <h4>Self-Employed · B2B Software &amp; Automation Engineer</h4>
+        <h5>2025 – Present</h5>
+        <p><em>Remote · Web applications, AI-powered tools &amp; automations for SMEs</em></p>
+        <ul>
+          <li>
+            Design and develop full-stack web applications (front-end and back-end)
+            deployed on GCP/Azure.
+          </li>
+          <li>
+            Build AI-enabled solutions (chatbots, assistants, OCR + LLM workflows,
+            automatic report generators) that streamline internal processes.
+          </li>
+          <li>
+            Deliver backend services and APIs in Node.js and Python, integrating
+            external systems (ERP/CRM, accounting, analytics).
+          </li>
+          <li>
+            Implement automation pipelines and DevOps practices (CI/CD, monitoring,
+            logging) to support long-term maintainable products.
+          </li>
+        </ul>
+      </div>
+
+
+
+
+
+              
               <div class="resume-item" style="text-align: justify">
                 <h4>&amp;SHUFL, Copenhagen, Denmark (Hybrid)</h4>
-                <h5>2023 – Present</h5>
+                <h5>2023 – 2025</h5>
                 <p><em>Software &amp; Automation Engineer</em></p>
                 <ul>
                   <li>
