--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
       <div class="resume-item" style="text-align: justify">
         <h4>Self-Employed · B2B Software &amp; Automation Engineer</h4>
         <h5>2025 – Present</h5>
-        <p><em>Remote · Web applications, AI-powered tools &amp; automations for SMEs</em></p>
+        <p><em>Remote · Web applications, AI-powered tools &amp; automations for SMEs, IT Consulting</em></p>
         <ul>
           <li>
             Design and develop full-stack web applications (front-end and back-end)
