--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               <div class="stats-item">
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="9"
+                  data-purecounter-end="10"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
@@ -268,93 +268,92 @@
         </div>
         <!-- End Section Title -->
 
-        <div class="container" data-aos="fade-up" data-aos-delay="100">
-          <div class="row">
+     <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="row">
 
-            <!-- Backend & Programming -->
-            <div class="col-md-6 col-lg-4">
-              <h4>Backend &amp; Programming</h4>
-              <ul class="two-column-list">
-                <li>Python</li>
-                <li>Node.js</li>
-                <li>JavaScript</li>
-                <li>SQL</li>
-                <li>Bash</li>
-                <li>REST APIs</li>
-              </ul>
-            </div>
+    <!-- Backend & Programming -->
+    <div class="col-md-6 col-lg-4">
+      <h4>Backend &amp; Programming</h4>
+      <ul class="two-column-list">
+        <li>Python</li>
+        <li>Node.js</li>
+        <li>JavaScript</li>
+        <li>REST APIs</li>
+        <li>Postman</li>
+        <li>Git &amp; version control</li>
+      </ul>
+    </div>
 
-            <!-- Frameworks & Frontend -->
-            <div class="col-md-6 col-lg-4">
-              <h4>Frameworks &amp; Frontend</h4>
-              <ul class="two-column-list">
-                <li>Express.js</li>
-                <li>React</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-              </ul>
-            </div>
+    <!-- Frameworks & Frontend -->
+    <div class="col-md-6 col-lg-4">
+      <h4>Frameworks &amp; Frontend</h4>
+      <ul class="two-column-list">
+        <li>React</li>
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>Express.js</li>
+      </ul>
+    </div>
 
-            <!-- DevOps & Cloud -->
-            <div class="col-md-6 col-lg-4">
-              <h4>DevOps &amp; Cloud</h4>
-              <ul class="two-column-list">
-                <li>Docker</li>
-                <li>CI/CD (GitHub Actions, GitLab CI)</li>
-                <li>Git &amp; version control</li>
-                <li>Linux</li>
-                <li>Google Cloud Platform (GCP)</li>
-                <li>Microsoft Azure</li>
-                <li>Firebase</li>
-              </ul>
-            </div>
+    <!-- DevOps & Cloud -->
+    <div class="col-md-6 col-lg-4">
+      <h4>DevOps &amp; Cloud</h4>
+      <ul class="two-column-list">
+        <li>Linux</li>
+        <li>Bash</li>
+        <li>Docker</li>
+        <li>CI/CD (GitHub Actions, GitLab CI)</li>
+        <li>Google Cloud Platform (GCP)</li>
+        <li>Microsoft Azure</li>
+        <li>Firebase</li>
+      </ul>
+    </div>
 
-            <!-- Networking, Security & Identity -->
-            <div class="col-md-6 col-lg-4">
-              <h4>Networking, Security &amp; Identity</h4>
-              <ul class="two-column-list">
-                <li>TCP/IP fundamentals</li>
-                <li>DNS, DHCP, routing basics</li>
-                <li>SSH &amp; remote administration</li>
-                <li>HTTPS, certificates, reverse proxies</li>
-                <li>Windows Server administration</li>
-                <li>Identity &amp; access management</li>
-                <li>OAuth2 / OpenID Connect</li>
-                <li>Single Sign-On (SSO)</li>
-              </ul>
-            </div>
+    <!-- Networking, Security & Identity -->
+    <div class="col-md-6 col-lg-4">
+      <h4>Networking, Security &amp; Identity</h4>
+      <ul class="two-column-list">
+        <li>TCP/IP fundamentals</li>
+        <li>DNS, DHCP, routing basics</li>
+        <li>SSH &amp; remote administration</li>
+        <li>HTTPS, certificates, reverse proxies</li>
+        <li>Windows Server administration</li>
+        <li>Identity &amp; access management</li>
+        <li>OAuth2 / OpenID Connect</li>
+        <li>Single Sign-On (SSO)</li>
+      </ul>
+    </div>
 
-            <!-- Data, Automation & AI Integration -->
-            <div class="col-md-6 col-lg-4">
-              <h4>Data, Automation &amp; AI</h4>
-              <ul class="two-column-list">
-                <li>PostgreSQL</li>
-                <li>MongoDB</li>
-                <li>n8n</li>
-                <li>Zapier &amp; workflow automation</li>
-                <li>LLM APIs (OpenAI, Gemini)</li>
-                <li>NLP</li>
-              </ul>
-            </div>
+    <!-- Data, Automation & AI -->
+    <div class="col-md-6 col-lg-4">
+      <h4>Data, Automation &amp; AI</h4>
+      <ul class="two-column-list">
+        <li>SQL</li>
+        <li>PostgreSQL</li>
+        <li>MongoDB</li>
+        <li>n8n</li>
+        <li>Zapier &amp; workflow automation</li>
+        <li>LLM APIs (OpenAI, Gemini)</li>
+        <li>NLP</li>
+      </ul>
+    </div>
 
-            <!-- Other -->
-            <div class="col-md-6 col-lg-4">
-              <h4>Other</h4>
-              <ul class="two-column-list">
-                <li>AutoCAD</li>
-                <li>Blender</li>
-                <li>Rhino Grasshopper</li>
-                <li>MatLAB</li>
-                <li>Postman</li>
-                <li>ETAP</li>
-                <li>3CAD</li>
-              </ul>
-            </div>
+    <!-- Other -->
+    <div class="col-md-6 col-lg-4">
+      <h4>Other</h4>
+      <ul class="two-column-list">
+        <li>AutoCAD</li>
+        <li>Blender</li>
+        <li>Rhino Grasshopper</li>
+        <li>MATLAB</li>
+        <li>ETAP</li>
+        <li>3CAD</li>
+      </ul>
+    </div>
 
+  </div>
+</div>
 
-
-          </div>
-        </div>
 
         <!-- Soft Skills Section -->
         <div class="container mt-4" data-aos="fade-up">
@@ -724,6 +723,7 @@
                 </div>
               </div>
 
+              
               <!-- Cloud Reporting & ERP Automations -->
               <div
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects"
@@ -824,6 +824,35 @@
               </div>
 
 
+
+<!-- Job Radar – ML, API & n8n Automation -->
+<div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects">
+  <div class="card shadow-sm p-3 h-100">
+    <div class="card-body d-flex flex-column">
+      <h4 class="card-title">Job Radar – ML, API &amp; n8n</h4>
+      <p class="card-text text-muted mb-1">
+        End-to-end job offer classifier using PyTorch, FastAPI and n8n, deployed on a Dockerized VM on GCP to auto-score and log incoming job alerts.
+      </p>
+      <p class="text-secondary small mb-3">
+        <i class="bi bi-calendar-event"></i> 2025
+      </p>
+      <button
+        class="btn btn-outline-secondary btn-sm mt-auto"
+        data-bs-toggle="modal"
+        data-bs-target="#projectModal"
+        onclick="openModal(
+          'Job Radar – ML, API &amp; n8n',
+          'Designed and trained a BERT based PyTorch classifier for role type and personal fit scoring using real job posting datasets. Wrapped the model in a FastAPI service and containerized it with Docker, then deployed on a GCP e2 micro VM. Integrated Gmail, Google Sheets and the API using n8n: a daily cron reads labeled job alert emails, extracts title and description, calls the ML API, filters on fit score, appends results to Google Sheets and sends a daily digest email with top matching offers. The system automates the full flow from incoming job alerts to prioritized, scored opportunities without manual review.'
+        )"
+      >
+        Details
+      </button>
+    </div>
+  </div>
+</div>
+
+
+              
               <!-- Smart Farm Automation Platform -->
               <div
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-projects"
